# bipedRobotAndarilhoPR

./: README.md
Version1/RBPI/: RBPI.ino
Version1/RBPI/RBPI2.ino/: RBPI2.ino.ino
Version1/feet/: feet2.1RBPI.gcode  feet2RBPI.gcode  feet3.dwg
Version1/leg/: leg2RBPI.stl  leg3.5RBPI.stl  leg3.6RBPI.stl  leg3.7RBPI.stl  leg3RBPI.stl  legRBPI.stl
Version1/tronco/: tronco.bak  tronco2.bak  tronco2.dwg  tronco3.5.bak  tronco3.6.dwg  tronco3.dwg  tronco3RBPI.stl
Version2/Main/: Base.ino
Version2/ROS2_Worskpace2/: robo.xml  spawn.py
Version2/ROS2_Worskpace2/andarilho_sim/: CMakeLists.txt  package.xml
Version2/ROS2_Worskpace2/andarilho_sim/src/: andarilho_pub.cpp
Version2/leg/: CE3_leg1.2.2.gcode  leg1.2.1.stl  leg1.2.2.stl  leg1.2.stl  leg1.bak  leg1.dwg  leg1.stl
Version2/quadril/: CE3_junta_v5.1.gcode  CE3_junta_v5.gcode  junta.bak  junta.dwg  junta.stl  junta4.1.stl  junta_ajustada.stl  junta_ajustada2.stl  junta_ajustada3.1.stl  junta_ajustada3.stl  junta_v5.stl
Version2/tronco/: CE3_Tronco2_centro_2.gcode  CE3_Tronco2_lateral_unico.gcode  New_Tronco.stl  Tronco.bak  Tronco.dwg  Tronco.stl  Tronco2.bak  Tronco2.dwg  Tronco2_centro.stl  Tronco2_centro_2.stl  Tronco2_lateral.stl  Tronco2_lateral_unico.stl  Tronco2_lateralv2.stl  Tronco_1.2.stl  Tronco_ajustado.stl
Version3/ROS2_Workspace/: andarilhoPR31.xml  friction_world.world  openScript.py  runSimulation.py
Version3/ROS2_Workspace/joint_publisher/: CMakeLists.txt  package.xml
Version3/ROS2_Workspace/joint_publisher/include/joint_publisher/: sensorFilter.hpp
Version3/ROS2_Workspace/joint_publisher/src/: backup.txt  getSensorValues.cpp  jointPublisher.cpp  modelKajitaWithKalman.cpp  modelKasaei2019-backup.txt  modelKasaei2019.cpp  stateSpaceNav.cpp  stateSpaceNavV2.cpp  stateSpaceTest.cpp
Version3/ROS2_Workspace/meshes/: Feet21Sim.stl  Feet22Sim.stl  JuntaLateral2Sim.stl  JuntaLateralSim.stl  Leg11Sim.stl  Leg12Sim.stl  Leg21Sim.stl  Leg22Sim.stl  TorsoSim.stl
Version3/ROS2_Workspace/sensor_filter/: CMakeLists.txt  package.xml
Version3/ROS2_Workspace/sensor_filter/include/sensor_filter/: sensor_filter.h
Version3/ROS2_Workspace/sensor_filter/src/: sensor_filter.cpp
Version3/ROS2_Workspace/state_space_controller/: CMakeLists.txt  package.xml
Version3/ROS2_Workspace/state_space_controller/include/state_space_controller/: backup.txt  state_space_controller.h
Version3/ROS2_Workspace/state_space_controller/src/: state_space_controller.cpp
Version3/ROS2_Workspace/stimate_state/: CMakeLists.txt  package.xml
Version3/ROS2_Workspace/stimate_state/include/stimate_state/: stimate_state.h
Version3/ROS2_Workspace/stimate_state/src/: stimate_state.cpp
Version3/RoboFisico/: Component_1.dwg  Feet1.1.stl  Feet1.bak  Feet1.dwg  Feet1.stl  Feet2.bak  Feet2.dwg  Feet2.stl  Feet3.stl  FeetVersion1Teste.stl  FullRobot.bak  FullRobot.dwg  JointXY.bak  JointXY.dwg  JointXY1.1.stl  JointXYTest1.stl  JointXYTest2.stl  JointXYVersion1Teste.stl  Leg1.1.stl  Leg1.bak  Leg1.dwg  Leg2.1.stl  Leg2.2.stl  Leg2.bak  Leg2.dwg  Torso1.1.stl  Torso1.2.stl  Torso1.3.stl  Torso1.bak  Torso1.dwg  Torso1Joint.stl  TorsoSim.dae  TorsoSim.stl  teste.bak  teste.dwg
Version3/Trajectory Planner/: footPLanner.cpp  footPlanner.py
feet/: feet1.bak  feet1.dwg  feet2.bak  feet2.dwg  feet2RBPI.stl  feet3.bak  feet3RBPI.gcode  feet3RBPI.stl  feet4RBPI.gcode
leg/: leg2RBPI.gcode  leg3RBPI.gcode
tronco/: tronco.dwg  tronco3.5.dwg  tronco3.6.bak  tronco3.6RBPI.stl  tronco3.bak  tronco3RBPI.gcode  tronco4.bak  tronco4.dwg
