<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>joint_publisher</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="null@todo.todo">null</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>rclcpp</depend>
  <depend>trajectory_msgs</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>sensor_filter</depend> 
  <depend>stimate_state</depend>
  <depend>state_space_controller</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
